# DonHash

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  donhash.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/donhash/: __init__.py  __main__.py  _engine.py  _hash_db.py  _noncrypto.py  cli.py  cracker.py  detector.py  output.py
tests/: conftest.py  test_all_hash_types.py  test_cli.py  test_cracker.py  test_detector.py  test_engine.py  test_hash_db.py  test_integration.py  test_license.py  test_md4.py  test_output.py  test_v210_fixes.py
